--- a/public/css/app.css
+++ b/public/css/app.css
@@ -739,6 +739,9 @@ video {
 .flex-shrink-0{
   flex-shrink: 0;
 }
+.border-collapse{
+  border-collapse: collapse;
+}
 .-translate-x-64{
   --tw-translate-x: -16rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1234,6 +1237,9 @@ video {
 .text-gray-300{
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+.underline{
+  text-decoration-line: underline;
 }
 .opacity-50{
   opacity: 0.5;
